--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
   <meta name="description" content="">
   <title>Static Template</title>
 
+  <!-- CSS styles -->
   <link href="./css/style.min.css" rel="stylesheet">
 </head>
 
