--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
   <link href="./css/style.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-dark text-white visually-hidden">
+<body class="bg-dark text-white">
   <div class="section-row" id="login">
     <div class="container vh-100 align-content-center">
       <form id="login-form">
