--- a/generators/animeflv.html
+++ b/generators/animeflv.html
@@ -3,5 +3,6 @@
   {% include '../templates/01-components/101-animeflv.php' %}
   {% include '../templates/01-components/102-sid-modal.php' %}
   {% include '../templates/01-components/105-overlay.php' %}
+  {% include '../templates/01-components/106-toast.php' %}
   {% include '../templates/00-globals/98-footer.php' %}
 {% include '../templates/00-globals/99-end.php' %}
